--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Quattrocento+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
+/* colour scheme */
 
 :root {
   --primaryColor: #1E201E ;
@@ -9,16 +10,10 @@
   --brandColor:#DAB894;
 }
 
-.search {
-  font-size: 3rem;
-  color: white;
-}
-
 body{
   /* box-sizing: border-box; */
   background-color: var(--brandColor);
  
-  
 }
 
 *{
@@ -26,6 +21,93 @@ body{
   padding: 0;
   box-sizing: border-box;
 }
+
+/* search function */
+
+.search {
+  font-size: 3rem;
+  color: white;
+}
+
+/* galleries sections containers */
+
+#gallery {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)) ;
+  margin: 10px;
+  grid-gap: 65px;
+  color: white;
+}
+
+#gallery h2{
+  font-size: 20px;
+  margin-bottom: 0px;
+  
+  }
+  
+  #gallery a {
+    font-size: 25px;
+    color: #D9FF5C;
+    text-decoration: none;
+    
+    }
+
+#galleryrandom{
+
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)) ;
+    margin: 10px;
+    grid-gap: 65px;
+    color: white;
+  }
+
+  #galleryrandom h2{
+    font-size: 20px;
+    margin-bottom: 0px;
+  }
+
+  #galleryrandom a {
+    font-size: 25px;
+    color: #D9FF5C;
+    text-decoration: none;
+    
+    }
+
+
+
+  img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border: 5px solid #D9FF5C;
+    border-radius: 8px;
+   
+  }
+  
+
+ 
+
+section{
+  min-height:100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 50px 0;
+}
+
+
+.container{
+  background-color: #1E201E;
+  width: 80%;
+  margin: auto;
+  border-radius: 20px;
+  text-align: center;
+  overflow: auto;
+}
+
 
 /* fonts */
 
@@ -43,6 +125,7 @@ body{
   font-weight: 400;
   letter-spacing: -1px;
   color: #DAB894;
+  
 }
 
 .msg h3{
@@ -62,92 +145,11 @@ html{
   font-size: 10px;
 }
 
-/* Images */
-
-img{
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border: 5px solid #D9FF5C;
-  border-radius: 8px;
-}
-
-#gallery {
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)) ;
-  margin-top: 20px;
-  grid-gap: 20px;
-  color: white;
-}
-
-.item{
-  width: 100%;
-  height: 200px;
-  position: relative;
-  overflow: hidden;
-  border-radius:8px;
-  transition: .3s ease box-shadow;
-  padding: 5px;
-}
 
 
-.item:nth-last-child(1){
-  margin-bottom: 0;
-}
-.item h3{
-  width: 100%;
-  padding: 20px;
-  position: absolute;
-  background-color: #00000040;
-  color: #1E201E;
-  bottom: -70px;
-  font-weight: 300;
-  transition: .5s ease-in-out bottom;
-  font-size: 15px;
 
-}
-.item:hover h3{
-  bottom: 0;
-}
+/* contact Me button */
 
-/* Sections and Containers */
-
-section{
-  min-height:100vh;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 50px 0;
-}
-
-
-.container{
-  background-color: #1E201E;
-  width: 75%;
-  max-width: 800px;
-  margin: auto;
-  border-radius: 20px;
-  text-align: center;
-}
-
-#card{
-
-  margin: auto;
-  max-width: 250px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  background-color: #DAB894;
-  padding-top: 15px;
-  border-radius: 10px;
-
-}
-
-/* Contact Info */
 
 #contactMe{
   
@@ -157,6 +159,22 @@ section{
   letter-spacing: 0.05em;
   color: #3D4235;
   position: relative;
+  margin-bottom: 25px;
+
+}
+
+.contactBtn {
+  cursor: pointer;
+  border: 5px solid #eeebe7;
+  border-radius: 8px;
+  font-size: 20px;
+  padding: 8px 10px;
+  /* margin: 20px 20px; */
+  color: #EEEBE7;
+  background-color: #1e201e;
+  display: block;
+  margin: auto;
+  margin-top: 10px;
   margin-bottom: 10px;
 
 }
@@ -195,6 +213,11 @@ button {
   background-color: #3D4235;
 }
 
+.search {
+  float: right;
+  font-size: 40px;
+}
+
 
 
 .searchBtn {
@@ -223,18 +246,7 @@ button {
 
 }
 
-.contactBtn {
-  cursor: pointer;
-  border: 5px solid #eeebe7;
-  border-radius: 8px;
-  font-size: 15px;
-  padding: 8px 10px;
-  /* margin: 20px 20px; */
-  color: #EEEBE7;
-  background-color: #1e201e;
-  
 
-}
 
 .btn {
   
@@ -276,6 +288,7 @@ button {
 #drinkResult {
   
   line-height: 2em;
+  margin-bottom: 20px;
   
 }
 
@@ -295,7 +308,9 @@ button {
   letter-spacing: 0.05em;
   color: #3D4235;
   position: relative;
+  margin-bottom: 20px;
   }
+
 
 
   #instructions {
@@ -348,6 +363,7 @@ button {
     padding: 0.5rem;
     align-content: center;
     list-style: none ;
+    text-decoration: none;
     
   }
   
@@ -357,6 +373,7 @@ button {
     color: #1E201E;
     list-style: none;
     font-size: 2rem;
+    text-decoration: none;
   }
   
   #footer .flex-container {
@@ -364,6 +381,7 @@ button {
     flex-direction: row;
     list-style: none;
    align-self: center;
+   text-decoration: none;
     
   }
 
@@ -385,8 +403,60 @@ button {
     .header ion-icon{
       font-size: 24px;
     }
-    .gallery{
+    /* .gallery{
       grid-gap: 30px;
     }
-    
+     */
    }
+
+
+/* .item{
+  width: 100%;
+  height: 200px;
+  position: relative;
+  overflow: hidden;
+  border-radius:8px;
+  transition: .3s ease box-shadow;
+  padding: 5px;
+  margin-bottom: 15px;
+} */
+
+/* .item:nth-last-child(1){
+  margin-bottom: 0;
+}
+
+.item h3{
+  width: 100%;
+  padding: 20px;
+  position: absolute;
+  background-color: #00000040;
+  color: #1E201E;
+  bottom: -70px;
+  font-weight: 300;
+  transition: .5s ease-in-out bottom;
+  font-size: 15px;
+  margin-bottom: 20px;
+
+}
+.item:hover h3{
+  bottom: 0;
+} */
+
+
+/* #card{
+
+  margin: auto;
+  max-width: 250px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-color: #DAB894;
+  padding-top: 15px;
+  border-radius: 10px;
+  margin-bottom: 30px;
+
+} */
+
+/* Contact Info */
